--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a class="menu_link" id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
                             <a class="menu_link" id="menu_link6" href="#tokenomics">Tokenomics</a>
                             <a class="menu_link" id="menu_link7" href="#faq">FAQ</a>
-                            <a class="menu_link" id="menu_link8" href="#community">Community</a>
+                            <a class="menu_link" id="menu_link8" href="#why_invest">Community</a>
                         </div>
                         <button class="button" type="button">Join Community</button>
                     </div>
@@ -145,7 +145,7 @@
                     <a class="menu_link" id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
                     <a class="menu_link" id="menu_link6" href="#tokenomics">Tokenomics</a>
                     <a class="menu_link" id="menu_link7" href="#faq">FAQ</a>
-                    <a class="menu_link" id="menu_link8" href="#community">Community</a>
+                    <a class="menu_link" id="menu_link8" href="#why_invest">Community</a>
                 </div>
                 <button class="button" type="button">Join Community</button>
             </div>
@@ -609,7 +609,7 @@
         <section class="tokenomiks mobile_opened" id="tokenomics">
             <div class="section_title">Tokenomics</div>
 
-            <div class="tokenomiks_wrapper">
+            <div class="tokenomiks_wrapper element-animation">
                 <div class="tokenomiks_col tokenomiks_col1">
                     <div class="tokenomiks_col_item">
                         <div class="tokenomiks_col_item_line">
@@ -730,7 +730,7 @@
             <div class="accordion_wrapper">
 
                 <ul class="accordion-list">
-                    <li>
+                    <li class=" element-animation">
                         <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
                                     alt=""></span></h3>
                         <div class="answer">
@@ -742,7 +742,7 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class=" element-animation">
                         <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
                                     alt=""></span></h3>
 
@@ -754,7 +754,7 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class=" element-animation">
                         <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
                                     alt=""></span></h3>
 
@@ -770,7 +770,7 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class=" element-animation">
                         <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
                                     alt=""></span></h3>
 
@@ -787,6 +787,43 @@
                 </ul>
             </div>
         </section>
+
+        <footer class="footer" id="faq">
+            <div class="section_title">Join our SpiderShib Inu Community</div>
+
+            <div class="footer_wrapper">
+                <div class="footer_icons element-animation">
+                    <div class="footer_icons_item footer_icons_item1">
+                        <div class="img_bg img_bg1"></div>
+                    </div>
+                    <div class="footer_icons_item footer_icons_item2">
+                        <div class="img_bg img_bg2"></div>
+                    </div>
+                    <div class="footer_icons_item footer_icons_item3">
+                        <div class="img_bg img_bg3"></div>
+                    </div>
+                    <div class="footer_icons_item footer_icons_item4">
+                        <div class="img_bg img_bg4"></div>
+                    </div>
+                    <div class="footer_icons_item footer_icons_item5">
+                        <div class="img_bg img_bg5"></div>
+                    </div>
+                    <div class="footer_icons_item footer_icons_item6">
+                        <div class="img_bg img_bg6"></div>
+                    </div>
+                </div>
+                <img src="img/Footer/spider_cat.png" alt="" class="footer_cat element-animation">
+                <div class="footer_hach_code element-animation">
+                    <div class="footer_hach_code_title">SpiderShiba Inu’s Contract address:</div>
+                    <div class="footer_hach_code_text">0xe4C6E7a0F696Fb2356A187020eb13E742792Fdcc</div>
+                </div>
+            </div>
+            <div class="footer_info">
+                <div class="footer_info_text">
+                    Copyright © 2021 SpiderShiba Inu. All Rights Reserved.
+                </div>
+            </div>
+        </footer>
     </div>
 
 
