--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a class="menu_link" id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
                             <a class="menu_link" id="menu_link6" href="#tokenomics">Tokenomics</a>
                             <a class="menu_link" id="menu_link7" href="#faq">FAQ</a>
-                            <a class="menu_link" id="menu_link8" href="#why_invest">Community</a>
+                            <a class="menu_link" id="menu_link8" href="#community">Community</a>
                         </div>
                         <button class="button" type="button">Join Community</button>
                     </div>
@@ -145,7 +145,7 @@
                     <a class="menu_link" id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
                     <a class="menu_link" id="menu_link6" href="#tokenomics">Tokenomics</a>
                     <a class="menu_link" id="menu_link7" href="#faq">FAQ</a>
-                    <a class="menu_link" id="menu_link8" href="#why_invest">Community</a>
+                    <a class="menu_link" id="menu_link8" href="#community">Community</a>
                 </div>
                 <button class="button" type="button">Join Community</button>
             </div>
@@ -555,13 +555,13 @@
                     </div>
                     <div class="team_item">
                         <img src="img/Team/1.png" alt="">
-                        <div class="team_item_title">Binh Mai</div>
-                        <div class="team_item_text">Blockchain expert</div>
+                        <div class="team_item_title">Bui Cai</div>
+                        <div class="team_item_text">Co-founder and CTO</div>
                     </div>
                     <div class="team_item">
                         <img src="img/Team/2.png" alt="">
-                        <div class="team_item_title">Bui Cai</div>
-                        <div class="team_item_text">Co-founder and CTO</div>
+                        <div class="team_item_title">Binh Mai</div>
+                        <div class="team_item_text">Blockchain expert</div>
                     </div>
                     <div class="team_item">
                         <img src="img/Team/4.png" alt="">
@@ -788,11 +788,11 @@
             </div>
         </section>
 
-        <footer class="footer" id="faq">
+        <footer class="footer">
             <div class="section_title">Join our SpiderShib Inu Community</div>
 
             <div class="footer_wrapper">
-                <div class="footer_icons element-animation">
+                <div class="footer_icons element-animation" id="community">
                     <div class="footer_icons_item footer_icons_item1">
                         <div class="img_bg img_bg1"></div>
                     </div>
@@ -818,7 +818,7 @@
                     <div class="footer_hach_code_text">0xe4C6E7a0F696Fb2356A187020eb13E742792Fdcc</div>
                 </div>
             </div>
-            <div class="footer_info">
+            <div class="footer_info" id="faq">
                 <div class="footer_info_text">
                     Copyright © 2021 SpiderShiba Inu. All Rights Reserved.
                 </div>
