hiddenSections_If_menuOpened

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             </div>
         </section>
 
-        <section class="accordion" id="why_invest">
+        <section class="accordion mobile_opened" id="why_invest">
             <div class="section_title">Frequently Asked Questions</div>
 
             <div class="accordion_wrapper">
@@ -787,7 +787,7 @@
             </div>
         </section>
 
-        <footer class="footer">
+        <footer class="footer mobile_opened">
             <div class="section_title">Join our SpiderShib Inu Community</div>
 
             <div class="footer_wrapper">
