--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                     </div>
                 </div>
                 <img src="img/Footer/spider_cat.png" alt="" class="footer_cat element-animation">
-                <div class="footer_hach_code element-animation">
+                <div class="footer_hach_code">
                     <div class="footer_hach_code_title">SpiderShiba Inu’s Contract address:</div>
                     <div class="footer_hach_code_text">0xe4C6E7a0F696Fb2356A187020eb13E742792Fdcc</div>
                 </div>
