--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             Spiderman.... but </div>
                         <div class="header_info_col_text  element-animation">It’s not only for pump and dump by Elon
                             tweets.
-                            This is real NFT game with Achiements, Goals and nice gameplay with tokenization</div>
+                            This is real NFT game with Achievements, Goals and nice gameplay with tokenization</div>
                         <div class="desktop_btns">
                             <div class="header_info_col_buttons">
                                 <button class="reb_btn">Join Community</button>
@@ -386,7 +386,7 @@
                                     <li>• Official launch on pinksale</li>
                                     <li>• Start marketing campaign</li>
                                     <li>• Airdrop</li>
-                                    <li>• Panckacke swap launch</li>
+                                    <li>• Pancake swap launch</li>
                                     <li>• Start of collaborations with decentraland and the sandbox</li>
                                 </ul>
                             </div>
@@ -427,9 +427,9 @@
                                     <li>• Whitepaper creation</li>
                                     <li>• Smartcontract testing</li>
                                     <li>• Building ideas for nft game</li>
-                                    <li>• start developing website and game</li>
-                                    <li>• start creating NFT</li>
-                                    <li>• start creating tokenomics</li>
+                                    <li>• Start developing website and game</li>
+                                    <li>• Start creating NFT</li>
+                                    <li>• Start creating tokenomics</li>
                                 </ul>
                             </div>
                         </div>
