--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@
                                 <li>• Whitepaper creation</li>
                                 <li>• Smartcontract testing</li>
                                 <li>• Building ideas for nft game</li>
-                                <li>• start developing website and game</li>
-                                <li>• start creating NFT</li>
-                                <li>• start creating tokenomics</li>
+                                <li>• Start developing website and game</li>
+                                <li>• Start creating NFT</li>
+                                <li>• Start creating tokenomics</li>
                             </ul>
                         </div>
                     </div>
@@ -499,7 +499,7 @@
                                 <li>• Official launch on pinksale</li>
                                 <li>• Start marketing campaign</li>
                                 <li>• Airdrop</li>
-                                <li>• Panckacke swap launch</li>
+                                <li>• Pancake swap launch</li>
                                 <li>• Start of collaborations with decentraland and the sandbox</li>
                             </ul>
                         </div>
