--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                     </div>
                     <div class="desktop_menu">
                         <div class="links">
-                            <a class="menu_link " id="menu_link" href="#how_it_works">How it works</a>
-                            <a class="menu_link" id="menu_link1" href="#play_and_earn">Play and earn</a>
-                            <a class="menu_link" id="menu_link2" href="#roadmap">Roadmap</a>
-                            <a class="menu_link" id="menu_link3" href="#team">Team</a>
-                            <a class="menu_link" id="menu_link4" href="#partners">Partners&Investors</a>
-                            <a class="menu_link" id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
-                            <a class="menu_link" id="menu_link6" href="#tokenomics">Tokenomics</a>
-                            <a class="menu_link" id="menu_link7" href="#faq">FAQ</a>
-                            <a class="menu_link" id="menu_link8" href="#community">Community</a>
+                            <a id="menu_link" href="#how_it_works">How it works</a>
+                            <a id="menu_link1" href="#play_and_earn">Play and earn</a>
+                            <a id="menu_link2" href="#roadmap">Roadmap</a>
+                            <a id="menu_link3" href="#team">Team</a>
+                            <a id="menu_link4" href="#partners">Partners&Investors</a>
+                            <a id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
+                            <a id="menu_link6" href="#tokenomics">Tokenomics</a>
+                            <a id="menu_link7" href="#faq">FAQ</a>
+                            <a id="menu_link8" href="#community">Community</a>
                         </div>
                         <button class="button" type="button">Join Community</button>
                     </div>
