--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 </div>
             </div>
         </section>
-
+        <div id = "toTop" >↑</div>
         <section class="tokenomiks mobile_opened" id="tokenomics">
             <div class="section_title">Tokenomics</div>
 
