--- a/index.html
+++ b/index.html
@@ -5,21 +5,13 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' ,content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <!-- <link rel='apple-touch-icon' sizes='180x180' href='img/favicon/apple-touch-icon.png'>
+    <link rel='apple-touch-icon' sizes='180x180' href='img/favicon/apple-touch-icon.png'>
     <link rel='icon' type='image/png' sizes='32x32' href='img/favicon/favicon-32x32.png'>
     <link rel='icon' type='image/png' sizes='16x16' href='img/favicon/favicon-16x16.png'>
     <link rel='manifest' href='img/favicon/site.webmanifest'>
     <link rel='mask-icon' href='img/favicon/safari-pinned-tab.svg' color='#5bbad5'>
     <meta name='msapplication-TileColor' content='#2b5797'>
-    <meta name='theme-color' content='#ffffff'> -->
-
-    <link rel="apple-touch-icon" sizes="180x180" href="img/f_avicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/f_avicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/f_avicon/favicon-16x16.png">
-    <link rel="manifest" href="img/f_avicon/site.webmanifest">
-    <link rel="mask-icon" href="img/f_avicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#00aba9">
-    <meta name="theme-color" content="#ffffff">
+    <meta name='theme-color' content='#ffffff'>
 
     <link rel='preconnect' href='https://fonts.googleapis.com'>
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
@@ -27,8 +19,8 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
     <link rel='stylesheet' href='css/main.css'>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
-    <!-- <title>Webmaster</title> -->
-    <title>SpiderShiba Inu</title>
+
+    <title>Webmaster</title>
 </head>
 
 <body>
